# desktop-pse

./: .gitignore  CHANGELOG.md  COMO_RESOLVER_UPDATER.md  ESTRUTURA_IMPLEMENTADA.md  GITHUB_RELEASE_INSTRUCTIONS.md  INSTALL_BIOMETRIC.md  INSTRUCOES_DESINSTALACAO.md  LEITOR_BIOMETRICO_AUTO_DETECCAO.md  OFFLINE_MODE.md  README.md  RELEASE_v1.0.6.md  SETUP_BIOMETRIC_COMPLETE.ps1  SISTEMA_ATUALIZACAO.md  UNINSTALL.ps1  assinar-e-publicar.ps1  build-assinado.ps1  build-com-senha.ps1  build-com-sig.ps1  build-e-publicar-completo.ps1  build-e-release.ps1  build-final.ps1  build-signed.ps1  check_device.ps1  criar-release.ps1  diagnostico-dll.ps1  employee.html  gerar-chave-nova.ps1  gerar-chave-sem-senha.ps1  index.html  latest.json  package-lock.json  package.json  reconfigurar-assinatura.ps1  release-auto.ps1  release-completo.ps1  release.ps1  remove_ghost_devices.ps1  update-v1.0.7.json  upload-release.ps1  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
IDBIO_SDK/doc/: 404.html  index.html  search.html  sitemap.xml
IDBIO_SDK/windows_driver/: controlidbio.inf  controlididproxusb.cat  install-driver.ps1
guides/: release-process.md
src/: App.tsx  employee.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.key  tauri.key.pub
src-tauri/capabilities/: default.json
src-tauri/resources/: cleanup-uninstall.ps1  controlidProxUSB.inf
src-tauri/src/: biometric_sdk.rs  biometric_service.rs  cleanup.rs  main.rs  sdk_manager.rs
src/components/: BiometricDiagnostic.tsx  BiometricStatusIndicator.tsx  BiometricTest.tsx  CacheIndicator.tsx  DateFilter.tsx  DeliveryValidationModal.tsx  DiscountOrderForm.tsx  EmergencyModal.tsx  EmployeeDeliveryModal.tsx  OrderUploadModal.tsx  PDFViewerModal.tsx  SdkStatusCheck.tsx  SignatureRenderer.tsx  SolicitacaoCard.tsx  SolicitacaoDetailsModal.tsx  TeamDeliveryModal.tsx  TestemunhaAutocomplete.tsx  TrocaModal.tsx  UpdateButton.tsx  UpdateChecker.tsx
(+54 files in other folders)
